# sqlite2drift

./: .gitignore  LICENSE  README-cn.md  README.md  pyproject.toml  sqlite2drift.py
src/sqlite2drift/: sqlite2drift.py
